@@ -1,52 +1,0 @@
-import os
-
-from cmind.automation import Automation
-from cmind import utils
-
-class CAutomation(Automation):
-    """
-    Automation actions
-    """
-
-    ############################################################
-    def __init__(self, cmind, automation_file):
-        super().__init__(cmind, __file__)
-
-    ############################################################
-    def test(self, i):
-        """
-        Test automation
-
-        Args:
-          (CM input dict): 
-
-          (out) (str): if 'con', output to console
-
-          automation (str): automation as CM string object
-          
-          parsed_automation (list): prepared in CM CLI or CM access function
-                                    [ (automation alias, automation UID) ] or
-                                    [ (automation alias, automation UID), (automation repo alias, automation repo UID) ]
-
-          (artifact) (str): artifact as CM string object
-          
-          (parsed_artifact) (list): prepared in CM CLI or CM access function
-                                    [ (artifact alias, artifact UID) ] or
-                                    [ (artifact alias, artifact UID), (artifact repo alias, artifact repo UID) ]
-
-          ...
-
-        Returns:
-          (CM return dict):
-
-          * return (int): return code == 0 if no error and >0 if error
-          * (error) (str): error string if return>0
-
-          * Output from this automation action
-           
-        """
-
-        import json
-        print (json.dumps(i, indent=2))
-
-        return {'return':0}
